fix: Fix calendar cut-off on mobile mode

--- a/src/PageView/CalendarApp/CalendarApp.css
+++ b/src/PageView/CalendarApp/CalendarApp.css
@@ -96,3 +96,12 @@
 .calendarExerciseList::-webkit-scrollbar {
     display: none;
   }
+
+  @media (min-width: 600px) {
+      .calendarWorkoutContainer .ContainerContent {
+          height: 470px;
+      }
+      .calendarExerciseList {
+          overflow: hidden;
+      }
+  }
